got some doc shit hworkin'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 copypasta = "0.10.0"
+inquire = "0.6.2"
 iroh = "0.12.0"
-iroh-bytes = "0.12.0"
-iroh-sync = "0.12.0"
+rand = "0.8.5"
 tokio = "1.35.1"
 tokio-util = "0.7.10"
 twox-hash = "1.6.3"
-x11rb = "0.13.0"
