--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ inquire = "0.6.2"
 iroh = "0.12.0"
 rand = "0.8.5"
 tokio = "1.35.1"
+tokio-stream = "0.1.14"
 tokio-util = "0.7.10"
 twox-hash = "1.6.3"
