--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+colored = "2.1.0"
 copypasta = "0.10.0"
+env_logger = "0.11.1"
 inquire = "0.6.2"
 iroh = "0.12.0"
 rand = "0.8.5"
