--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ copypasta = "0.10.0"
 env_logger = "0.11.1"
 inquire = "0.6.2"
 iroh = "0.12.0"
-iroh-net = "0.12.0"
 log = "0.4.20"
+quic-rpc = "0.6.1"
 rand = "0.8.5"
 tokio = "1.35.1"
 tokio-stream = "0.1.14"
