--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ iroh = "0.12.0"
 log = "0.4.20"
 quic-rpc = "0.6.1"
 rand = "0.8.5"
+structopt = "0.3.26"
 tokio = "1.35.1"
 tokio-stream = "0.1.14"
 tokio-util = "0.7.10"
