--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4.20"
 quic-rpc = "0.6.1"
 rand = "0.8.5"
 structopt = "0.3.26"
+thiserror = "1.0.57"
 tokio = "1.35.1"
 tokio-stream = "0.1.14"
 tokio-util = "0.7.10"
