Handle complete content (#3)
* updating progress for later

* made some changes that are sure tice 'n' nite 🤙🥴🤙

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+bytes = "1.5.0"
 colored = "2.1.0"
 copypasta = "0.10.0"
 env_logger = "0.11.1"
@@ -16,6 +17,7 @@ log = "0.4.20"
 quic-rpc = "0.6.1"
 rand = "0.8.5"
 structopt = "0.3.26"
+thiserror = "1.0.57"
 tokio = "1.35.1"
 tokio-stream = "0.1.14"
 tokio-util = "0.7.10"
